# slidie

./: .buildinfo  .gitignore  MANIFEST.in  README.md  builds.html  file-numbering.html  genindex.html  iframe.html  index.html  links.html  magic-text.html  metadata.html  objects.inv  pyproject.toml  rendering.html  requirements_doc.txt  requirements_test.txt  search.html  searchindex.js  slidie-mv.html  speaker-notes.html  tour.html  video.html  xhtml-viewer.html
.github/workflows/: docs.yml
_sources/: builds.rst.txt  file-numbering.rst.txt  iframe.rst.txt  index.rst.txt  links.rst.txt  metadata.rst.txt  rendering.rst.txt  slidie-mv.rst.txt  speaker-notes.rst.txt  tour.rst.txt  video.rst.txt
docs/source/: builds.rst  conf.py  file-numbering.rst  iframe.rst  index.rst  links.rst  magic-text.rst  metadata.rst  rendering.rst  slidie-mv.rst  speaker-notes.rst  tour.rst  video.rst  xhtml-viewer.rst
slidie/: builds.py  embed_thumbnails.py  ffmpeg.py  file_numbering.py  inkscape.py  links.py  magic.py  magic_text.py  metadata.py  speaker_notes.py  svg_utils.py  text_to_selectable_paths.py  video.py  xml_namespaces.py
slidie/render_pdf/: __init__.py  pdf.py
slidie/render_png/: __init__.py
tests/: conftest.py  test_builds.py  test_embed_thumbnails.py  test_ffmpeg.py  test_file_numbering.py  test_inkscape.py  test_javascript.py  test_links.py  test_magic.py  test_magic_text.py  test_metadata.py  test_render_xhtml.py  test_slidie_video_stills_cmd.py  test_speaker_notes.py  test_svg_utils.py  test_text_to_selectable_paths.py  test_video.py  test_with_mypy.py
(+75 files in other folders)
