[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slidie"
version = "0.0.1"
dependencies = []

[project.scripts]
slidie = "slidie.scripts.slidie_cmd:main"
slidie-mv = "slidie.scripts.slidie_mv_cmd:main"
slidie-video-stills = "slidie.scripts.slidie_video_stills_cmd:main"
