[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slidie"
dependencies = ["pikepdf"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "slidie.__version__"}

[project.scripts]
slidie = "slidie.scripts.slidie_cmd:main"
slidie-mv = "slidie.scripts.slidie_mv_cmd:main"
slidie-video-stills = "slidie.scripts.slidie_video_stills_cmd:main"
